# GrapheryExecutor

./: .dockerignore  .env-sample  .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup.sh
executor/: ADVANCED_USAGE.md  __init__.py  setup.py  user_server.py
executor/seeker/: __init__.py  pycompat.py  sight.py  utils.py  variables.py
executor/server_utils/: main_functions.py  params.py  tools.py  utils.py
executor/settings/: __init__.py  default.py  types.py  variables.py
executor/tests/: example-code.py
executor/tests/seeker_tests/: inspect_try.py  multiple_instance_test.py  single_instance_test.py  test_chinese.py  test_mini_toolbox.py  test_not_implemented.py  test_seeker.py  utils.py
executor/tests/seeker_tests/mini_toolbox/: __init__.py
executor/tests/seeker_tests/samples/: exception.py  indentation.py  recorder.py  recursion.py
executor/tests/seeker_tests/test_multiple_files/: test_multiple_files.py
executor/tests/seeker_tests/test_multiple_files/multiple_files/: foo.py
executor/tests/seeker_tests/test_utils/: test_ensure_tuple.py
executor/tests/utils_tests/: controller_tests.py  file_helpers_test.py  recorder_helper.py  recorder_test_util.py  recorder_utils.py  test_cli.py  test_controller.py  test_graphology.py  test_recorder.py  test_server.py  test_variables.py
executor/utils/: _controller.py  _recorder.py  cache_file_helpers.py  cli.py  controller.py  cytoscape_helper.py  dummy_graph.py  graphology_helper.py  logger.py  processor.py  recorder.py
