[tool.poetry]
name = "graphery_executor"
version = "3.2.2"
description = "The executor module for Graphery"
authors = ["Larry Zeng <graphery@reed.edu>"]
license = "MIT"
readme = "README.md"
url="https://github.com/Reed-CompBio/GrapheryExecutor"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
packages = [{include = "executor"}]
exclude = ["executor/tests"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Reed-CompBio/GrapheryExecutor/issues"
"Documentation" = "https://docs.graphery.reedcompbio.org"
"Source Code" = "https://github.com/Reed-CompBio/GrapheryExecutor"


[tool.poetry.dependencies]
python = "^3.10"
networkg = {git = "https://github.com/Reed-CompBio/networkx.git", rev = "networkg-2.7.1r2"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
codacy-coverage = "^1.3.11"

[tool.poetry.scripts]
graphery_executor = "executor:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
