[tool.poetry]
name = "graphery_executor"
version = "3.3.4"
description = "The executor module for Graphery"
authors = ["Larry Zeng <graphery@reed.edu>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
packages = [{ include = "executor" }]
exclude = ["executor/tests"]

[tool.poetry.urls]
"Repository" = "https://github.com/Reed-CompBio/GrapheryExecutor"
"Bug Tracker" = "https://github.com/Reed-CompBio/GrapheryExecutor/issues"
"Documentation" = "https://docs.graphery.reedcompbio.org"
"Source Code" = "https://github.com/Reed-CompBio/GrapheryExecutor"


[tool.poetry.dependencies]
python = "~3.10"
networkg = { git = "https://github.com/Reed-CompBio/networkx.git", rev = "networkg-2.8.4r1" }


[tool.poetry.group.sci]
optional = true

[tool.poetry.group.sci.dependencies]
numpy = { version = "^1.23.0" }
scipy = { version = "^1.8.1" }
matplotlib = { version = "^3.5.2" }
pandas = { version = "^1.4.3" }


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = { version = "^7.1.1" }
black = { version = "^22.1.0" }
codacy-coverage = { version = "^1.3.11" }
pre-commit = { version = "^2.19.0" }


[tool.poetry.scripts]
graphery_executor = "executor:main"

[build-system]
requires = ["poetry-core>=1.1.0b2"]
build-backend = "poetry.core.masonry.api"
